...
        />
      ) : null}

      <Image source={imageFlora} style={styles.image} resizeMode="cover" />

      <Header
        title="Entrar na Plataforma"
        subtitle="Identifique-se para acessar o sistema"
        icon={LogIn}
      />

      <View style={styles.formContainer}>
        <InputField
...
